[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Hammer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Jumpman.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/JumpManGame.gd" type="Script" id=3]

[node name="JumpManGame" type="Node2D"]
script = ExtResource( 3 )

[node name="Hammer" parent="." instance=ExtResource( 1 )]

[node name="Hammer2" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 365 )
scale = Vector2( 1, -1 )

[node name="Jumpman" parent="." instance=ExtResource( 2 )]
position = Vector2( 600, 240 )

[node name="StunTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="hit" from="Jumpman" to="." method="_on_Jumpman_hit"]
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
